syntax = "proto3";
option go_package = "github.com/satont/tsuwari/libs/grpc/generated/api/commands_unprotected";
package api.commands_unprotected;

message GetChannelCommandsRequest {
	string channel_id = 1;
}

message GetChannelCommandsResponse {
	repeated Command commands = 1;
}

message Command {
	message Permission {
		string name = 1;
		string type = 2;
	}

	string name = 1;
	repeated string responses = 2;
	int64 cooldown = 3;
	string cooldown_type = 4;
	repeated string aliases = 5;
	optional string description = 6;
	optional string group = 7;
	optional string module = 8;
	repeated Permission permissions = 9;
}
